# VINS-Mono-Preprocessor

./: README.md
ROS1/: README.md
ROS2/: README.md
ROS2/VINS-Mono-Preprocessor(ROS2)/config_pkg/config/euroc/: euroc_config.yaml  euroc_config_no_extrinsic.yaml
ROS2/VINS-Mono-Preprocessor(ROS2)/feature_tracker/launch/: vins_feature_tracker.launch.py
ROS2/VINS-Mono-Preprocessor(ROS2)/feature_tracker/src/: feature_tracker_node.cpp
ROS2/VINS-Mono-Preprocessor(ROS2)/vins_estimator/: CMakeLists.txt  package.xml
ROS2/VINS-Mono-Preprocessor(ROS2)/vins_estimator/launch/: euroc.launch.py  run_preprocessing.launch.py
ROS2/VINS-Mono-Preprocessor(ROS2)/vins_estimator/src/: estimator_node.cpp  parameters.cpp
ROS2/vins_interfaces/: CMakeLists.txt  package.xml
ROS2/vins_interfaces/msg/: ImuSequence.msg  VinsSyncData.msg
